--- a/final-pjt-front/package.json
+++ b/final-pjt-front/package.json
@@ -15,6 +15,8 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
     "@popperjs/core": "^2.11.8",
+    "@vue-youtube/component": "^0.0.6",
+    "@vue-youtube/core": "^0.0.6",
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
